--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <br><br><br>
         <button id="boton2"><a href="musica.html" target="_blank"><img id="imagenboton" src="resources/image/decoracion navidad con fondo azul MUSICA.jpg" alt=""></a></button>
         <br><br><br>
-        <button id="boton3"><a href="tradiciones.html" target="_blank"><img id="imagenbotont" src="resources/image/decoracion navidad con fondo azul TRADICIONES.jpg" alt=""></a></button>
+        <button id="boton3"><a href="tradiciones.html" target="_blank"><img id="imagenboton" src="resources/image/decoracion navidad con fondo azul TRADICIONES.jpg" alt=""></a></button>
     </center>
     
 <br><br><br><br><br><br>
