--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
     <br>
     <img id="textonavideño" src="resources/image/navidad dominicana 2024-Photoroom.png" alt="" width="800px">
         <br>
-        <button id="boton1"><a href="platillos.html" target="_blank"><img id="imagenboton" src="resources/image/decoracion navidad con fondo azul PLATILLOS.jpg" alt=""></a></button>
+        <button id="boton1"><a href="platillos.html"><img id="imagenboton" src="resources/image/decoracion navidad con fondo azul PLATILLOS.jpg" alt=""></a></button>
         <br><br><br>
-        <button id="boton2"><a href="musica.html" target="_blank"><img id="imagenboton" src="resources/image/decoracion navidad con fondo azul MUSICA.jpg" alt=""></a></button>
+        <button id="boton2"><a href="musica.html"><img id="imagenboton" src="resources/image/decoracion navidad con fondo azul MUSICA.jpg" alt=""></a></button>
         <br><br><br>
-        <button id="boton3"><a href="tradiciones.html" target="_blank"><img id="imagenboton" src="resources/image/Sin título.png" alt=""></a></button>
+        <button id="boton3"><a href="tradiciones.html"><img id="imagenboton" src="resources/image/Sin título.png" alt=""></a></button>
     </center>
     
 <br><br><br><br><br><br>
